Updated Error Formatting  - Form no longer changes spacing between inputs when an error message    is displayed or removed.

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,12 +9,14 @@ body * {
 ul {
   list-style: none;
   width: 400px;
+  height: 430px;
   background-color: rgb(52, 122, 203);
   padding: 10px 8px 5px 10px;
   border-radius: 20px;
   color: white;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   margin: 50px auto;
+  display: relative;
 }
 
 h1 {
@@ -26,7 +28,11 @@ h1 {
 li,
 .btns {
   display: flex;
-  margin: 10px;
+  margin: 10px 10px 30px 10px;
+}
+
+li:has(input.input-error) {
+  margin-bottom: 3px;
 }
 
 label {
@@ -44,11 +50,18 @@ input {
   border-radius: 20px;
 }
 
+.input-error {
+  margin-bottom: 0px;
+  border: solid 1px rgb(203, 52, 52);
+}
+
 .btns {
   justify-content: end;
-  margin-top: 15px;
-  padding-top: 5px;
+
+  padding-top: 10px;
   border-top: solid 1px rgba(255, 255, 255, 0.5);
+  position: relative;
+  bottom: -20px;
 }
 
 .btns button {
@@ -79,4 +92,17 @@ input {
 
 .reset {
   background-color: rgb(203, 52, 52);
+}
+
+.error {
+  display: none;
+  color: rgb(255, 209, 209);
+  height: 17px;
+  text-align: right;
+  padding-right: 15px;
+}
+
+.active {
+  display: block;
+  padding-bottom: none;
 }
